--- a/index.html
+++ b/index.html
@@ -29,10 +29,48 @@
 
             </div>
             <div class="rightwrap">
-                <div class="textcontainer"></div>
+                <div class="textcontainer">
+                    <h1 >YOGA CLASS</h1>
+                    <p > Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, necessitatibus.  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime accusantium incidunt sit enim similique natus odit fuga sint facilis recusandae!</p>
+               <button>Join now</button>
+                </div>
             </div>
 
         </div>
+        <img  id="dsideimg" src="/images/design1.png" alt="">
+    </div>
+    <div class="section2">
+    <div class="headersec">
+        <h1 class="texth1">CHOOSE CLASS</h1>
+    <p class="textp"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, necessitatibus.  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime accusantium incidunt sit enim similique natus odit fuga sint facilis recusandae!</p>
+  
+ 
+    </div>
+   
+    <div class="contentsec">
+      
+        <div class="cardsec">
+            <div class="imgsec"><img class="dcardimg"src="/images/design1.png" alt="">
+                <img class="gcardimg" src="/images/girl1.png" alt="">
+            </div>
+            <div class="textsec">
+                <h1 class="texth1small">NEWBIE CLASS</h1>
+                <p class="textp">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div class="cardsec">
+            <div class="imgsec"><img class="dcardimg"src="/images/design1.png" alt="">
+                <img class="gcardimg" src="/images/girl2.png" alt=""></div>
+            <div class="textsec"><h1 class="texth1small">ADVANCED CLASS</h1>
+                <p class="textp">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+        </div>
+        <div class="cardsec">
+            <div class="imgsec"><img class="dcardimg"src="/images/design1.png" alt="">
+                <img class="gcardimg" src="/images/girl3.png" alt=""></div>
+            <div class="textsec"><h1 class="texth1small">EXPERT CLASS</h1>
+                <p class="textp">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+        </div>
+    </div>
     </div>
     
 </body>
