--- a/index.html
+++ b/index.html
@@ -185,5 +185,23 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tenetur volupta
                             </div>
                             </div>
                             </div>
+                            <div class="section7">
+                                <div class="topsec"> <div class="imgsec"><img class="dcardimg" src="/images/desidndown.png" alt="">
+                                    <img class="gcardimg" src="/images/girlshort.png" alt="">
+                                </div></div>
+                                <div class="downsec">
+                                    <h2 class="fontslim text-blue-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem deleniti nihil molestias fuga porro eligendi at illum accusantium quod!</h2>
+                                <h1 class="tname texth1  text-blue-color">TRAINER AKSHAY</h1>
+                                </div>
+
+
+                                </div>
+
+                                <div class="searchbarsec">
+                                    <h1 class="texth1">DON'T MISS OUR UPDATE</h1>
+                                    <p class="textp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur voluptatibus, eius magni impedit dolores totam placeat? Iusto, debitis.</p>
+                                <div class="textbox"><input id="searchbox" type="text" placeholder="Your email" name="" id=""><button id="subbtn" class="regiterbtn">Subcribe</button></div>
+                                </div>
+
 </body>
 </html>
