final commit footer complte

--- a/index.html
+++ b/index.html
@@ -202,6 +202,44 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tenetur volupta
                                     <p class="textp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur voluptatibus, eius magni impedit dolores totam placeat? Iusto, debitis.</p>
                                 <div class="textbox"><input id="searchbox" type="text" placeholder="Your email" name="" id=""><button id="subbtn" class="regiterbtn">Subcribe</button></div>
                                 </div>
+                                <div class="section8">
+                                   <div class="footersec1">
+                                       <div class="textfosec">
+                                       <h1 class="texth1small text-blue-color">TITLE HERE</h1>
+                                       <p class="textp text-blue-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora officia fugiat velit repudiandae eius vitae corrupti facilis consectetur magnam aperiam reiciendis fugit, quia autem ducimus molestiae natus earum reprehenderit harum.
+                                       </p>
+                                    </div>
+                                   </div>
+                                   <div class="footersec2">
+                                <ul class="footerlist">
+                                   <li>ABOUT</li>
+                                   <li>History</li>
+                                   <li>Our Team</li>
+                                   <li>Brand Gudielines</li>
+                                   <li>Term & Conditions</li>
+                                   <li>Privarcy Policy</li></ul></div>
+                                   <div class="footersec3">
+                                    <ul class="footerlist">
+                                        <li>SERVICES</li>
+                                        <li>How to order</li>
+                                        <li>Our Product</li>
+                                        <li>Order Status</li>
+                                        <li>Promo</li>
+                                        <li>Payment Method</li></ul>
+                                   </div>
+                                   
+                                   <div class="footersec4">
+                                    <ul class="footerlist">
+                                        <li>FOLLOW</li>
+                                        <li><img src="/images/icons8-facebook.svg" alt="">Facebook</li>
+                                        <li><img src="/images/icons8-twitter.png" alt="">Twitter</li>
+                                        <li><img src="/images/insta.png" alt="">Instagram </li>
+                                        <li><img src="/images/in6.png" alt="">Whatsapp</li>
+                                      </ul>
+                                   </div>
+                                   </div>
+                                
+                                </div>
 
 </body>
 </html>
