images path correction

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="wrapperbg">
             <div class="leftwrap">
                 <div class="imgsec"> <img src="./images/design1.png" alt=""></div>
-                <img id="imggirl1" src="/images/yogaimg1.png" alt="">
+                <img id="imggirl1" src="./images/yogaimg1.png" alt="">
 
             </div>
             <div class="rightwrap">
@@ -37,7 +37,7 @@
             </div>
 
         </div>
-        <img  id="dsideimg" src="/images/design1.png" alt="">
+        <img  id="dsideimg" src="./images/design1.png" alt="">
     </div>
     <div class="section2">
     <div class="headersec">
@@ -50,8 +50,8 @@
     <div class="contentsec">
       
         <div class="cardsec">
-            <div class="imgsec"><img class="dcardimg"src="/images/design1.png" alt="">
-                <img class="gcardimg" src="/images/girl1.png" alt="">
+            <div class="imgsec"><img class="dcardimg"src="./images/design1.png" alt="">
+                <img class="gcardimg" src="./images/girl1.png" alt="">
             </div>
             <div class="textsec">
                 <h1 class="texth1small">NEWBIE CLASS</h1>
@@ -59,14 +59,14 @@
             </div>
         </div>
         <div class="cardsec">
-            <div class="imgsec"><img class="dcardimg"src="/images/design1.png" alt="">
-                <img class="gcardimg" src="/images/girl2.png" alt=""></div>
+            <div class="imgsec"><img class="dcardimg"src="./images/design1.png" alt="">
+                <img class="gcardimg" src="./images/girl2.png" alt=""></div>
             <div class="textsec"><h1 class="texth1small">ADVANCED CLASS</h1>
                 <p class="textp">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
         </div>
         <div class="cardsec">
             <div class="imgsec"><img class="dcardimg"src="/images/design1.png" alt="">
-                <img class="gcardimg" src="/images/girl3.png" alt=""></div>
+                <img class="gcardimg" src="./images/girl3.png" alt=""></div>
             <div class="textsec"><h1 class="texth1small">EXPERT CLASS</h1>
                 <p class="textp">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
         </div>
@@ -151,7 +151,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tenetur volupta
                                     <h1 class="texth1small text-blue-color">NEWBIE CLASS</h1>
                                     <h1 class="texth1small text-blue-color">$00.00</h1>
                                 </div>
-                                <div class="price-img-sec"><img src="/images/priceimg.png" alt=""></div>
+                                <div class="price-img-sec"><img src="./images/priceimg.png" alt=""></div>
                                 <div class="btn-p-sec">
                                     <p class="textp text-blue-color">Lorem ipsum dolor sit. Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur.</p>
                                     <button class="regiterbtn">REGISTER NOW</button>
@@ -165,7 +165,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tenetur volupta
                                         <h1 class="texth1small text-blue-color">ADVANCED CLASS</h1>
                                         <h1 class="texth1small text-blue-color">$00.00</h1>
                                     </div>
-                                    <div class="price-img-sec"><img src="/images/priceimg.png" alt=""></div>
+                                    <div class="price-img-sec"><img src="./images/priceimg.png" alt=""></div>
                                     <div class="btn-p-sec">
                                         <p class="textp text-blue-color">Lorem ipsum dolor sit. Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur.</p>
                                         <button class="regiterbtn">REGISTER NOW</button>
@@ -177,7 +177,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tenetur volupta
                                         <h1 class="texth1small text-blue-color">EXPERT CLASS</h1>
                                         <h1 class="texth1small text-blue-color">$00.00</h1>
                                     </div>
-                                    <div class="price-img-sec"><img src="/images/priceimg.png" alt=""></div>
+                                    <div class="price-img-sec"><img src="./images/priceimg.png" alt=""></div>
                                     <div class="btn-p-sec">
                                         <p class="textp text-blue-color">Lorem ipsum dolor sit. Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur.</p>
                                         <button class="regiterbtn">REGISTER NOW</button>
@@ -186,8 +186,8 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tenetur volupta
                             </div>
                             </div>
                             <div class="section7">
-                                <div class="topsec"> <div class="imgsec"><img class="dcardimg" src="/images/desidndown.png" alt="">
-                                    <img class="gcardimg" src="/images/girlshort.png" alt="">
+                                <div class="topsec"> <div class="imgsec"><img class="dcardimg" src="./images/desidndown.png" alt="">
+                                    <img class="gcardimg" src=".images/girlshort.png" alt="">
                                 </div></div>
                                 <div class="downsec">
                                     <h2 class="fontslim text-blue-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem deleniti nihil molestias fuga porro eligendi at illum accusantium quod!</h2>
@@ -231,10 +231,10 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tenetur volupta
                                    <div class="footersec4">
                                     <ul class="footerlist">
                                         <li>FOLLOW</li>
-                                        <li><img src="/images/icons8-facebook.svg" alt="">Facebook</li>
-                                        <li><img src="/images/icons8-twitter.png" alt="">Twitter</li>
-                                        <li><img src="/images/insta.png" alt="">Instagram </li>
-                                        <li><img src="/images/in6.png" alt="">Whatsapp</li>
+                                        <li><img src="./images/icons8-facebook.svg" alt="">Facebook</li>
+                                        <li><img src="./images/icons8-twitter.png" alt="">Twitter</li>
+                                        <li><img src="./images/insta.png" alt="">Instagram </li>
+                                        <li><img src="./images/in6.png" alt="">Whatsapp</li>
                                       </ul>
                                    </div>
                                    </div>
